package cz.ajraa.tournament.tournament.internal;

enum MatchState {
    PENDING,
    IN_PROGRESS,
    FINISHED
}
